--- a/app/src/main/res/layout/fragment_complemento_cadastro.xml
+++ b/app/src/main/res/layout/fragment_complemento_cadastro.xml
@@ -42,9 +42,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Só mais alguns passos..."
-                    android:fontFamily="@font/bold"
                     android:textColor="@color/boxText"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textNomeCadastro"
@@ -53,8 +53,8 @@
                     android:layout_marginLeft="4dp"
                     android:layout_marginTop="25dp"
                     android:text="Nome"
-                    android:fontFamily="@font/bold"
-                    android:textColor="@color/boxText"/>
+                    android:textColor="@color/boxText"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/boxNomeCadastro"
@@ -63,11 +63,11 @@
                     android:ems="10"
                     android:hint="Nome"
                     android:inputType="textPersonName"
-                    android:fontFamily="@font/bold"
                     android:textColor="@color/branco"
                     android:textColorHighlight="#FFFFFF"
                     android:textColorHint="#FFFFFF"
-                    android:textColorLink="@color/branco" />
+                    android:textColorLink="@color/branco"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textSobrenomeCadastro"
@@ -76,8 +76,8 @@
                     android:layout_marginLeft="4dp"
                     android:layout_marginTop="15dp"
                     android:text="Sobrenoime"
-                    android:fontFamily="@font/bold"
-                    android:textColor="@color/boxText" />
+                    android:textColor="@color/boxText"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/boxSobrenomeCadastro"
@@ -86,11 +86,11 @@
                     android:ems="10"
                     android:hint="Sobrenome"
                     android:inputType="textPersonName"
-                    android:fontFamily="@font/bold"
                     android:textColor="@color/branco"
                     android:textColorHighlight="#FFFFFF"
                     android:textColorHint="#FFFFFF"
-                    android:textColorLink="@color/branco" />
+                    android:textColorLink="@color/branco"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textEstadoCadastro"
@@ -98,13 +98,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/bold"
                     android:text="Estado"
-                    android:textColor="@color/boxText" />
+                    android:textColor="@color/boxText"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/boxEstadoCadastro"
-                    android:fontFamily="@font/bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -113,7 +112,8 @@
                     android:textColor="@color/branco"
                     android:textColorHighlight="#FFFFFF"
                     android:textColorHint="#FFFFFF"
-                    android:textColorLink="@color/branco" />
+                    android:textColorLink="@color/branco"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textCPFCadastro"
@@ -122,8 +122,8 @@
                     android:layout_marginLeft="4dp"
                     android:layout_marginTop="15dp"
                     android:text="CPF"
-                    android:fontFamily="@font/bold"
-                    android:textColor="@color/boxText" />
+                    android:textColor="@color/boxText"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/boxCpf"
@@ -132,11 +132,11 @@
                     android:ems="10"
                     android:hint="CPF"
                     android:inputType="textPersonName"
-                    android:fontFamily="@font/bold"
                     android:textColor="@color/branco"
                     android:textColorHighlight="#FFFFFF"
                     android:textColorHint="#FFFFFF"
-                    android:textColorLink="@color/branco" />
+                    android:textColorLink="@color/branco"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -150,8 +150,8 @@
                         android:layout_marginLeft="4dp"
                         android:layout_marginTop="15dp"
                         android:text="DDD"
-                        android:fontFamily="@font/bold"
-                        android:textColor="@color/boxText" />
+                        android:textColor="@color/boxText"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textTelefoneCadastro"
@@ -160,8 +160,8 @@
                         android:layout_marginLeft="4dp"
                         android:layout_marginTop="15dp"
                         android:text="Telefone"
-                        android:fontFamily="@font/bold"
-                        android:textColor="@color/boxText" />
+                        android:textColor="@color/boxText"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -176,11 +176,11 @@
                         android:ems="10"
                         android:hint="DDD"
                         android:inputType="textPersonName"
-                        android:fontFamily="@font/bold"
                         android:textColor="@color/branco"
                         android:textColorHighlight="#FFFFFF"
                         android:textColorHint="#FFFFFF"
-                        android:textColorLink="@color/branco" />
+                        android:textColorLink="@color/branco"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/boxTelefoneCadastro"
@@ -189,11 +189,11 @@
                         android:ems="10"
                         android:hint="Telefone"
                         android:inputType="textPersonName"
-                        android:fontFamily="@font/bold"
                         android:textColor="@color/branco"
                         android:textColorHighlight="#FFFFFF"
                         android:textColorHint="#FFFFFF"
-                        android:textColorLink="@color/branco" />
+                        android:textColorLink="@color/branco"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <Button
@@ -202,7 +202,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="45dp"
                     android:background="@drawable/button"
-                    android:text="Finalizar cadastro"/>
+                    android:text="Finalizar cadastro"
+                    android:textColor="@color/branco"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </ScrollView>
