--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -110,5 +110,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <RatingBar
+            android:id="@+id/ratingClassificacao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="84dp"
+            tools:layout_editor_absoluteY="645dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
