--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,11 +4,29 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_storage_black_24dp"
+            android:title="Home" />
+        <item
+            android:id="@+id/nav_gallery"
+            android:icon="@drawable/ic_photo_library_black_24dp"
+            android:title="Gallery" />
+        <item
+            android:id="@+id/nav_slideshow"
+            android:icon="@drawable/ic_queue_music_black_24dp"
+            android:title="Slideshow" />
+        <item
+            android:id="@+id/nav_perfil"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Perfil" />
+
+
+        <!-- <item
             android:id="@+id/nav_fotoPerfil"
             android:icon="@drawable/ic_photo_library_black_24dp"
-            android:title="@string/menu_mudarFotoPerfil"
-            android:onClick="chamarAlert"/>
+            android:title="@string/menu_mudarFotoPerfil" />
         <item
             android:id="@+id/nav_historico"
             android:icon="@drawable/ic_queue_music_black_24dp"
@@ -32,7 +50,6 @@
         <item
             android:id="@+id/nav_sair"
             android:icon="@drawable/ic_do_not_disturb_black_24dp"
-            android:title="@string/menu_sair" />
-
+            android:title="@string/menu_sair" /> -->
     </group>
 </menu>
