--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,11 +11,11 @@
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home">
 
-        <action
+        <!-- <action
             android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
-            app:destination="@id/nav_home_second" />
+            app:destination="@id/nav_home_second" /> -->
     </fragment>
-    <fragment
+    <!-- <fragment
         android:id="@+id/nav_home_second"
         android:name="com.example.pb_android_radion.ui.home.HomeSecondFragment"
         android:label="@string/home_second"
@@ -27,7 +27,7 @@
         <argument
             android:name="myArg"
             app:argType="string" />
-    </fragment>
+    </fragment> -->
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -43,6 +43,6 @@
     <fragment
         android:id="@+id/nav_perfil"
         android:name="com.example.pb_android_radion.Fragment.PerfilFragment"
-        android:label="@string/menu_settings"
+        android:label="Perfil"
         tools:layout="@layout/fragment_perfil" />
 </navigation>
