--- a/app/src/main/res/navigation/nav_login.xml
+++ b/app/src/main/res/navigation/nav_login.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/cadastroFragment"
-        android:name="com.example.pb_android_radion.Fragment.CadastroFragment"
+        android:name="com.example.pb_android_radion.fragment.CadastroFragment"
         android:label="fragment_cadastro"
         tools:layout="@layout/fragment_cadastro" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.pb_android_radion.Fragment.LoginFragment"
+        android:name="com.example.pb_android_radion.fragment.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/complementoCadastroFragment"
-        android:name="com.example.pb_android_radion.Fragment.ComplementoCadastroFragment"
+        android:name="com.example.pb_android_radion.fragment.ComplementoCadastroFragment"
         android:label="fragment_complemento_cadastro"
         tools:layout="@layout/fragment_complemento_cadastro" >
         <action
