Operações de Get no login e Create no cadastro

--- a/app/src/main/res/layout/fragment_complemento_cadastro.xml
+++ b/app/src/main/res/layout/fragment_complemento_cadastro.xml
@@ -131,7 +131,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="CPF"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:textColor="@color/branco"
                     android:textColorHighlight="#FFFFFF"
                     android:textColorHint="#FFFFFF"
@@ -175,7 +175,7 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:hint="DDD"
-                        android:inputType="textPersonName"
+                        android:inputType="number"
                         android:textColor="@color/branco"
                         android:textColorHighlight="#FFFFFF"
                         android:textColorHint="#FFFFFF"
@@ -188,7 +188,7 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:hint="Telefone"
-                        android:inputType="textPersonName"
+                        android:inputType="number"
                         android:textColor="@color/branco"
                         android:textColorHighlight="#FFFFFF"
                         android:textColorHint="#FFFFFF"
